clusters/homelab/apps/ml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
